netcfg (1.01) UNRELEASED; urgency=low

  * Joey Hess
    - Ignore failure from ip in dhclient-script when setting mtu, in case
      the supplied mtu is invalid.
  * Joshua Kwan
    - Give the user a choice to leave the network unconfigured if nothing is
      plugged in. (Closes: #264476)
    - netcfg-dhcp.templates: "may work" becomes "may succeed".
      (Closes: #261471)

 -- Joshua Kwan <joshk@triplehelix.org>  Sat,  7 Aug 2004 17:12:20 -0700

netcfg (1.00) unstable; urgency=low

  * Updated translations: 
    - Arabic (ar.po) by Abdulaziz Al-Arfaj
    - Welsh (cy.po) by Dafydd Harries
    - Danish (da.po) by Frederik Dannemare
    - German (de.po) by Dennis Stampfer
    - Persian (fa.po) by Arash Bijanzadeh
    - Croatian (hr.po) by Krunoslav Gernhard
    - Italian (it.po) by Giuseppe Sacco
    - Swedish (sv.po) by Per Olofsson
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Jul 2004 19:09:47 -0400

netcfg (0.72) unstable; urgency=low

  * Joshua Kwan
    - Don't bother depending on mii-diag-udeb for netcfg-static as it's not
      used.
    - Patch by Adam Thornton to add recognition for IUCV devices in static
      configuration. (Closes: #258109)
    - Don't suggest hostname given by the DHCP server if it's invalid.
      (Closes: #258207)
    - Ask netcfg/choose_interface at prio critical. (Closes: #257963)
    - Build with NDEBUG.
    - Indicate which interfaces are wireless. (Closes: #258338)
    - Cut off domain when seeding hostname from DNS. (Closes: #258852)
      Seed get_domain with it instead.
  * Colin Watson
    - Fix typo (s/occured/occurred/g). Unfuzzy translations.
  * Per Olofsson
    - Generate hotplug mapping entries for 16-bit PCMCIA cards as well,
      since they will be managed by hotplug in pcmcia-cs 3.2.5-8.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure